#
# Copyright @ 2019 Audi AG. All rights reserved.
# 
#     This Source Code Form is subject to the terms of the Mozilla
#     Public License, v. 2.0. If a copy of the MPL was not distributed
#     with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# If it is not possible or desirable to put the notice in a particular file, then
# You may include the notice in a location (such as a LICENSE file in a
# relevant directory) where a recipient would be likely to look for such a notice.
# 
# You may add additional accurate notices of copyright ownership.
#
add_subdirectory(stm/tester_stm/src)
add_subdirectory(stm/tester_stm_notifier/src)
add_subdirectory(property_tree/tester_fep_property_tree/src)
add_subdirectory(property_tree/tester_pt/src)
add_subdirectory(property_tree/test_rpc_configuration/src)
add_subdirectory(tx/dds_sample_size_benchmark/src)
add_subdirectory(tx/tester_fep_data_sample/src)
add_subdirectory(tx/tester_fep_data_access/src)
add_subdirectory(tx/tester_data_listener_adapter/src)
add_subdirectory(tx/tester_transmission_selection/src)
add_subdirectory(tx/tester_transmission_adapter/src)
add_subdirectory(incident_handler/incident_handler/src)
add_subdirectory(incident_handler/strat_console_log/src)
add_subdirectory(incident_handler/strat_file_log/src)
add_subdirectory(incident_handler/strat_history_log/src)
add_subdirectory(incident_handler/strat_notif_log/src)
add_subdirectory(incident_handler/extended_logging/src)
add_subdirectory(fep_mapping/src)
add_subdirectory(automation/tester_fep_ai/src)
add_subdirectory(signal_registry/tester_signal_registry/src)
add_subdirectory(common/tester_fep_common/src)
add_subdirectory(module/tester_fep_module/src)
add_subdirectory(rpc/src)
add_subdirectory(ddb/tester_ddb/src)
add_subdirectory(leak_check/leak_module/src)
add_subdirectory(timing_master/src)
add_subdirectory(timing_client/src)
add_subdirectory(data_access/src)
add_subdirectory(transmission/src)
add_subdirectory(tooling/tester_meta_model/src)
add_subdirectory(clock/src)
add_subdirectory(timing_legacy/src)
add_subdirectory(data_registry/src)
add_subdirectory(scheduler/src)
add_subdirectory(examples/tester_examples/src)