#
# Copyright @ 2019 Audi AG. All rights reserved.
# 
#     This Source Code Form is subject to the terms of the Mozilla
#     Public License, v. 2.0. If a copy of the MPL was not distributed
#     with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# If it is not possible or desirable to put the notice in a particular file, then
# You may include the notice in a location (such as a LICENSE file in a
# relevant directory) where a recipient would be likely to look for such a notice.
# 
# You may add additional accurate notices of copyright ownership.
#
#add_subdirectory(tester_cli/src)
add_subdirectory(tester_module_stm/src)
add_subdirectory(tester_module_tx/src)
#dd_subdirectory(tester_stm_tx/src)
add_subdirectory(tester_stm_pt/src)
add_subdirectory(tester_pt_tx/src)
add_subdirectory(tester_dds_interface/src)
add_subdirectory(tester_sr_tx/src)
add_subdirectory(tester_module_pt/src)
add_subdirectory(tester_ih_pt/src)
add_subdirectory(tester_message_tx/src)
add_subdirectory(tester_sr_pt/src)
add_subdirectory(tester_tc_tm/src)
